# yoloscribe

./: .env.example  .env.local  .gitignore  CLAUDE.md  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  env.example  local-mcp-servers.json.example
.skills/brave-search/: mcp.json  skill.md
.skills/github/: skill.md
.skills/linear/: mcp.json  skill.md
agent-runner/: .env.example  .gitignore  Dockerfile  Dockerfile.local  Makefile  pyproject.toml
agent-runner/agent_runner/: agent_runner.py  enqueuer.py  example_mcp_server.py  linear_mcp_wrapper.js  log_setup.py  memory_reasoner.py  parse.py  polling_worker.py  scope.py  telemetry.py  test_local_mcp.py  trace_fetcher.py
agent-runner/agent_runner/agents/: __init__.py  base.py  consolidation.py  eval_annotator.py  ingest.py  notification.py  page.py  search.py
agent-runner/agentscribe_agent_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent-runner/tests/: conftest.py  test_ingest_agent.py  test_notification_agent.py  test_page_agent.py  test_search.py
agent-runner/tests/conformance/: BASELINE.md  conftest.py  test_r1_no_bucket.py  test_r2_signal_fidelity.py  test_r3_idempotency.py  test_r4_proposal_safety.py  test_r5_routing_opinion.py  test_r6_capability_failure.py  test_r7_memory_ambience.py
agent-runner/tests/conformance/support/: lock_table.py  report.py  scratch_site.py  scripted_model.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  agent_md.py  archive_helpers.py  auth.py  cloudfront_signing.py  config.py  credentials.py  defaults.py  fts_cache.py  hybrid_search.py  internal_auth.py  k8s_agent.py  log_setup.py  main.py  mcp_server.py  message_history.py  models.py  notifications.py  path_safety.py  pyproject.toml  queue_helpers.py  rate_limit.py  run_tokens.py  s3_helpers.py  s3_storage.py  settings_cache.py  site_helpers.py  sse_broadcaster.py  state.py  supabase_helpers.py  telemetry.py  token_budget.py
backend/agents/: __init__.py  base.py  chat.py  content_writer.py  creator.py  librarian.py  messaging.py  models.py  page_creator.py  runner.py  search.py
backend/auth_providers/: __init__.py  base.py  cognito.py  supabase.py
backend/aws/: infra.py
backend/routers/: __init__.py  archive.py  assets.py  chat.py  content.py  health.py  ingest.py  internal.py  mcp_oauth.py  message.py  messaging.py  oauth.py  obsidian.py  outbound_webhooks.py  pages.py  search.py  settings.py  signal_sinks.py  site.py  token_budget.py  tokens.py  tools.py  versions.py  webhooks.py
backend/scripts/: provision_user.sh
backend/signal_sinks/: __init__.py  base.py  composite.py  webhook.py
backend/spikes/: S0_3_RESULTS.md  s0_3_claude_sdk_chat.py
backend/tests/: test_assets.py  test_chat_agent_tools.py  test_check_scope.py  test_cloudfront_signing.py  test_code_guards.py  test_history_role_filtering.py  test_input_validation.py  test_internal_auth.py  test_mcp_auth_middleware.py  test_overwrite_protection.py  test_rate_limit.py  test_run_tokens.py  test_s3tools_ownership.py  test_shared_write_validation.py  test_signal_sinks.py  test_signal_sinks_router.py  test_token_auth.py  test_token_crud.py  test_write_lock_retry.py
default-skills/gmail-digest/: SKILL.md
discord-bot/: Dockerfile  pyproject.toml
discord-bot/discord_bot/: __main__.py  bot.py  config.py  crypto.py  rate_tracker.py  supabase.py
discord-bot/tests/: test_crypto.py  test_parsing.py  test_rate_limit_error.py  test_rate_tracker.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: content.md
frontend/src/: App.css  App.tsx  assets.ts  auth.ts  auth_cognito.ts  main.tsx  supabase.ts
indexer/: Dockerfile  Makefile  pyproject.toml
indexer/indexer/: chunker.py  fts_index.py  index_runner.py  polling_worker.py
infra/: deploy_frontend.sh
infra/cloudfront/: spa-router.js
infra/helm/: agent-runner.dev.us-west-2.values.yaml  agent-runner.example.values.yaml  backend.dev.us-west-2.values.yaml  backend.example.values.yaml  discord-bot.dev.us-west-2.values.yaml  discord-bot.example.values.yaml  indexer.dev.us-west-2.values.yaml  indexer.example.values.yaml  install.sh  install_backend.sh  install_discord_bot.sh  install_indexer.sh  install_messaging_bot.sh  install_runner.sh  (+2 more)
messaging-bot/: Dockerfile  Makefile  package-lock.json  package.json  tsconfig.json
notification-mcp/: .gitignore  pyproject.toml
notification-mcp/notification_mcp/: server.py
notification-mcp/skill-template/: SKILL.md  mcp.json
obsidian-plugin/: conflicts.ts  events.ts  ingest.ts  main.ts  manifest.json  package-lock.json  package.json  save.ts  settings.ts  styles.css  sync.ts  tsconfig.json
scripts/: build-themes.sh  deploy.sh  index_page.py  migrate_service_accounts.py  purge_user_index_entries.py  reindex_all.py  update-user-site.sh
specs/: 01_project_structure.md  02_content_rendering.md  03_skills_and_agents.md  04_wiki_architecture.md  05_authorization_access_control.md  06_indexing_and_search.md  07_page_access_control.md  08_users_and_groups.md  09_mobile_client.md  10_aws_sso_skill_auth.md  11_mcp_server_deployment.md  12_model_routing.md  13_remote_mcp_server.md
supabase/: README.md
(+221 files in other folders)
