[project]
name = "yoloscribe-agent-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "kubernetes>=29.0.0",
    "strands-agents[anthropic,otel]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "openai>=2.41.1",
    "aws-bedrock-token-generator>=1.1.0",
    "mcp>=1.0.0",
    "mcp-oauth",
    "python-json-logger>=3.2.0",
    "yolo-secrets",
    "yoloscribe-io",
    "yoloscribe-notification-mcp",
]

[project.scripts]
agent-runner = "agent_runner.agent_runner:main"
agent-enqueuer = "agent_runner.enqueuer:main"
polling-worker = "agent_runner.polling_worker:main"
test-local-mcp = "agent_runner.test_local_mcp:main"

[tool.uv]
package = true


[tool.uv.sources]
mcp-oauth = {path = "../libs/mcp_oauth"}
yolo-secrets = {path = "../libs/yolo_secrets"}
yoloscribe-io = {path = "../libs/yoloscribe_io"}
yoloscribe-notification-mcp = {path = "../notification-mcp"}

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "conformance: fast, in-process conformance checks (default `make conformance` target)",
    "conformance_live: needs `docker compose up` (MinIO/ElasticMQ/dynamodb-local) — `make conformance-live`",
]
