[project]
name = "agentscribe-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]>=0.35.0",
    "boto3>=1.42.0",
    "python-multipart==0.0.9",
    "pydantic>=2.12.2",
    "strands-agents[anthropic]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "kubernetes>=29.0.0",
    "pyjwt[crypto]>=2.8.0",
    "mcp-oauth",
    "fastmcp>=2.14.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "boto3-stubs[s3,sqs]>=1.42.57",
    "mypy>=1.19.1",
]

[tool.uv.sources]
mcp-oauth = {path = "../libs/mcp_oauth"}
