[project]
name = "yoloscribe-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]>=0.35.0",
    "boto3>=1.42.0",
    "python-multipart==0.0.9",
    "pydantic>=2.12.2",
    "strands-agents[anthropic,otel]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "kubernetes>=29.0.0",
    "pyjwt[crypto]>=2.8.0",
    "mcp-oauth",
    "yolo-secrets",
    "yoloscribe-io",
    "fastmcp>=2.14.0",
    "slowapi>=0.1.9",
    "bleach>=6.3.0",
    "python-json-logger>=3.2.0",
    "openai>=2.41.1",
    "aws-bedrock-token-generator>=1.1.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "boto3-stubs[s3,sqs]>=1.42.57",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.uv.sources]
mcp-oauth = {path = "../libs/mcp_oauth"}
yolo-secrets = {path = "../libs/yolo_secrets"}
yoloscribe-io = {path = "../libs/yoloscribe_io"}

[dependency-groups]
# S0.3 spike only (projects/yoloscribe/feature-backlog/agent-runtime-rearchitecture
# in the wiki) — installed via `uv sync --group spike`, not part of the default
# install. Not a production dependency until/unless Phase 2 adopts the SDK.
spike = ["claude-agent-sdk"]
