[project]
name = "yoloscribe-indexer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "kubernetes>=29.0.0",
    "langchain-text-splitters>=0.3.0",
]

[project.scripts]
polling-worker = "indexer.polling_worker:main"
index-runner   = "indexer.index_runner:main"

[tool.uv]
package = true
